Fix some styles and remove z-index perspective

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -3,12 +3,16 @@
   padding-bottom: 64px;
 }
 
+.maxWidthWrapper {
+  position: relative;
+}
+
 .maxWidthWrapper .header {
-  max-width: 65%;
+  width: 65%;
 }
 
 .maxWidthWrapper .controlColumn {
-  max-width: 50%;
+  width: 50%;
 }
 
 .header {
@@ -42,18 +46,17 @@
   height: 40%;
   bottom: 0;
   background-color: hsl(195deg, 20%, 86%);
-  z-index: -1;
 }
 
 @media only screen and (max-width: 600px) {
   .maxWidthWrapper .header {
-    max-width: 100%;
+    width: 100%;
   }
 
   .maxWidthWrapper .controlColumn {
     position: absolute;
     display: flex;
-    max-width: 100%;
+    width: 100%;
     z-index: 1;
     width: 400px;
     overflow-x: auto;
